// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlreadyRegisteredDialog matches snapshot after switching to email only resend confirmation 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    data-cvent-id="already-registered"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          title
                        </h2>
                      </div>
                    </div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      tabindex="-1"
                    >
                      <span
                        class="mockNucleusCoreTransition"
                      >
                        <div
                          class=""
                          style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                        >
                          <span
                            class="mockNucleusCoreTransition"
                          >
                            <div>
                              <div
                                data-cvent-id="resend-confirmation-form"
                              >
                                <div>
                                  <div
                                    class="instructionalText"
                                    style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                                  >
                                    EventWidgets_AlreadyRegistered_ResendConfirmationInstructions__resx
                                  </div>
                                  <div
                                    class="element"
                                    data-cvent-id="email-address"
                                  >
                                    <label
                                      class="labelOnTop"
                                      for="emailAddress"
                                      style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                                    >
                                      <span
                                        class=""
                                      >
                                        <span
                                          class=""
                                        >
                                          * 
                                        </span>
                                        <span
                                          data-cvent-id="label"
                                        >
                                          EventWidgets_Fields_EmailAddress__resx
                                        </span>
                                      </span>
                                    </label>
                                    <div
                                      class="inputContainerOnRight"
                                    >
                                      <div
                                        class=""
                                      >
                                        <input
                                          class=""
                                          data-cvent-id="input"
                                          id="emailAddress"
                                          name="emailAddress"
                                          placeholder=""
                                          required=""
                                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                          type="text"
                                          value="emailAddress"
                                        />
                                      </div>
                                    </div>
                                  </div>
                                  <div
                                    class="element"
                                  >
                                    <button
                                      class=""
                                      data-cvent-id="back-link"
                                      title="< EventWidgets_AlreadyRegistered_BackButton__resx"
                                      type="button"
                                    >
                                      <span>
                                        &lt; EventWidgets_AlreadyRegistered_BackButton__resx
                                      </span>
                                    </button>
                                  </div>
                                  <button
                                    class=""
                                    data-cvent-id="submit-button"
                                    style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                                  >
                                    EventWidgets_AlreadyRegistered_Submit__resx
                                  </button>
                                </div>
                              </div>
                            </div>
                          </span>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`AlreadyRegisteredDialog matches snapshot when closed 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    />
  </div>,
]
`;

exports[`AlreadyRegisteredDialog matches snapshot when login submit fails 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    data-cvent-id="already-registered"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          title
                        </h2>
                      </div>
                    </div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      tabindex="-1"
                    >
                      <span
                        class="mockNucleusCoreTransition"
                      >
                        <div
                          class=""
                          style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                        >
                          <div
                            data-cvent-id="login-form"
                          >
                            <div>
                              <div
                                class="instructionalText"
                                style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                              >
                                instructionalText
                              </div>
                              <div
                                class="element"
                                data-cvent-id="email-address"
                              >
                                <label
                                  class="labelOnTop"
                                  for="emailAddress"
                                  style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                                >
                                  <span
                                    class=""
                                  >
                                    <span
                                      class=""
                                    >
                                      * 
                                    </span>
                                    <span
                                      data-cvent-id="label"
                                    >
                                      EventWidgets_Fields_EmailAddress__resx
                                    </span>
                                  </span>
                                </label>
                                <div
                                  class="inputContainerOnRight"
                                >
                                  <div
                                    class=""
                                  >
                                    <input
                                      class=""
                                      data-cvent-id="input"
                                      id="emailAddress"
                                      name="emailAddress"
                                      placeholder=""
                                      required=""
                                      style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                      type="text"
                                      value="emailAddress"
                                    />
                                  </div>
                                </div>
                              </div>
                              <div
                                class="element"
                                data-cvent-id="confirmation-number"
                              >
                                <label
                                  class="labelOnTop"
                                  for="confirmationNumber"
                                  style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                                >
                                  <span
                                    class=""
                                  >
                                    <span
                                      class=""
                                    >
                                      * 
                                    </span>
                                    <span
                                      data-cvent-id="label"
                                    >
                                      EventWidgets_Fields_ConfirmationNumber__resx
                                    </span>
                                  </span>
                                </label>
                                <div
                                  class="inputContainerOnRight"
                                >
                                  <div
                                    class=""
                                  >
                                    <input
                                      class=""
                                      data-cvent-id="input"
                                      id="confirmationNumber"
                                      name="confirmationNumber"
                                      placeholder=""
                                      required=""
                                      style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                      type="text"
                                      value="confirmationNumber"
                                    />
                                  </div>
                                </div>
                              </div>
                              <div
                                class="element"
                              >
                                <button
                                  class=""
                                  data-cvent-id="resend-confirmation-button"
                                  title="EventWidgets_AlreadyRegistered_ForgotConfirmationButton__resx"
                                  type="button"
                                >
                                  <span>
                                    EventWidgets_AlreadyRegistered_ForgotConfirmationButton__resx
                                  </span>
                                </button>
                              </div>
                              
                              <button
                                class=""
                                data-cvent-id="submit-button"
                                style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                              >
                                EventWidgets_AlreadyRegistered_Login__resx
                              </button>
                            </div>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`AlreadyRegisteredDialog matches snapshot when opened 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    data-cvent-id="already-registered"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          title
                        </h2>
                      </div>
                    </div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      tabindex="-1"
                    >
                      <span
                        class="mockNucleusCoreTransition"
                      >
                        <div
                          class=""
                          style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                        >
                          <div
                            data-cvent-id="login-form"
                          >
                            <div>
                              <div
                                class="instructionalText"
                                style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                              >
                                instructionalText
                              </div>
                              <div
                                class="element"
                                data-cvent-id="email-address"
                              >
                                <label
                                  class="labelOnTop"
                                  for="emailAddress"
                                  style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                                >
                                  <span
                                    class=""
                                  >
                                    <span
                                      class=""
                                    >
                                      * 
                                    </span>
                                    <span
                                      data-cvent-id="label"
                                    >
                                      EventWidgets_Fields_EmailAddress__resx
                                    </span>
                                  </span>
                                </label>
                                <div
                                  class="inputContainerOnRight"
                                >
                                  <div
                                    class=""
                                  >
                                    <input
                                      class=""
                                      data-cvent-id="input"
                                      id="emailAddress"
                                      name="emailAddress"
                                      placeholder=""
                                      required=""
                                      style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                      type="text"
                                      value="emailAddress"
                                    />
                                  </div>
                                </div>
                              </div>
                              <div
                                class="element"
                                data-cvent-id="confirmation-number"
                              >
                                <label
                                  class="labelOnTop"
                                  for="confirmationNumber"
                                  style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                                >
                                  <span
                                    class=""
                                  >
                                    <span
                                      class=""
                                    >
                                      * 
                                    </span>
                                    <span
                                      data-cvent-id="label"
                                    >
                                      EventWidgets_Fields_ConfirmationNumber__resx
                                    </span>
                                  </span>
                                </label>
                                <div
                                  class="inputContainerOnRight"
                                >
                                  <div
                                    class=""
                                  >
                                    <input
                                      class=""
                                      data-cvent-id="input"
                                      id="confirmationNumber"
                                      name="confirmationNumber"
                                      placeholder=""
                                      required=""
                                      style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                      type="text"
                                      value="confirmationNumber"
                                    />
                                  </div>
                                </div>
                              </div>
                              <div
                                class="element"
                              >
                                <button
                                  class=""
                                  data-cvent-id="resend-confirmation-button"
                                  title="EventWidgets_AlreadyRegistered_ForgotConfirmationButton__resx"
                                  type="button"
                                >
                                  <span>
                                    EventWidgets_AlreadyRegistered_ForgotConfirmationButton__resx
                                  </span>
                                </button>
                              </div>
                              
                              <button
                                class=""
                                data-cvent-id="submit-button"
                                style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                              >
                                EventWidgets_AlreadyRegistered_Login__resx
                              </button>
                            </div>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`AlreadyRegisteredDialog matches snapshot when resend confirmation request fails due to throttling 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    data-cvent-id="already-registered"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          title
                        </h2>
                      </div>
                    </div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      tabindex="-1"
                    >
                      <span
                        class="mockNucleusCoreTransition"
                      >
                        <div
                          class=""
                          style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                        >
                          <span
                            class="mockNucleusCoreTransition"
                          >
                            <div
                              data-cvent-id="resend-confirmation-failure-message"
                            >
                              <div
                                class="container"
                              >
                                <span
                                  class="container"
                                  data-cvent-id="icon"
                                >
                                  <span
                                    aria-hidden="true"
                                    class="icon error"
                                    role="img"
                                  />
                                </span>
                                <h2
                                  class=""
                                  data-cvent-id="title"
                                  style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                                />
                                <h4
                                  class=""
                                  data-cvent-id="subtitle"
                                  style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.5625rem; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                                >
                                  EventWidgets_AlreadyRegistered_ConfirmationSendFailureMessage__resx
                                </h4>
                                <div
                                  class="backButtonContainer"
                                >
                                  <button
                                    class=""
                                    data-cvent-id="link"
                                    title="< EventWidgets_AlreadyRegistered_BackToLoginButton__resx"
                                    type="button"
                                  >
                                    <span>
                                      &lt; EventWidgets_AlreadyRegistered_BackToLoginButton__resx
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </span>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`AlreadyRegisteredDialog matches snapshot when resend confirmation request succeeds 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    data-cvent-id="already-registered"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          title
                        </h2>
                      </div>
                    </div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      tabindex="-1"
                    >
                      <span
                        class="mockNucleusCoreTransition"
                      >
                        <div
                          class=""
                          style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                        >
                          <span
                            class="mockNucleusCoreTransition"
                          >
                            <div
                              data-cvent-id="resend-confirmation-success-message"
                            >
                              <div
                                class="container"
                              >
                                <span
                                  class="container"
                                  data-cvent-id="icon"
                                >
                                  <span
                                    aria-hidden="true"
                                    class="icon success"
                                    role="img"
                                  />
                                </span>
                                <h2
                                  class=""
                                  data-cvent-id="title"
                                  style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                                >
                                  EventWidgets_AlreadyRegistered_ConfirmationSentTitle__resx
                                </h2>
                                <h4
                                  class=""
                                  data-cvent-id="subtitle"
                                  style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.5625rem; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                                >
                                  EventWidgets_AlreadyRegistered_ConfirmationSentMessage__resx
                                </h4>
                                <div
                                  class="backButtonContainer"
                                >
                                  <button
                                    class=""
                                    data-cvent-id="link"
                                    title="< EventWidgets_AlreadyRegistered_BackToLoginButton__resx"
                                    type="button"
                                  >
                                    <span>
                                      &lt; EventWidgets_AlreadyRegistered_BackToLoginButton__resx
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </span>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`AlreadyRegisteredDialog onLogin method routes correctly for confirmed registration - pending approval 1`] = `
Array [
  Object {
    "payload": Object {
      "currentLogin": Object {
        "confirmationNumber": "confirmationNumber",
        "emailAddress": "emailAddress",
      },
      "regCart": Object {
        "eventRegistrations": Object {
          "11111111-1111-1111-1111-111111111111": Object {
            "attendee": Object {
              "inviteeStatus": 2,
            },
            "registrationPathId": "11111111-1111-1111-1111-111111111111",
            "registrationTypeId": "11111111-1111-1111-1111-111111111111",
            "sessionWaitlists": Object {},
          },
        },
        "eventSnapshotVersions": Object {
          "undefined": "fake-eventSnapshot-version",
        },
        "regCartId": "regCartId",
        "regMod": true,
        "regRetrieval": true,
        "status": "INPROGRESS",
      },
    },
    "type": "event-guestside-site/registrantLogin/LOG_IN_REGISTRANT_SUCCESS",
  },
  Object {
    "payload": Object {},
    "type": "event-guestside-site/sessionsInWaitlist/ADD_MULTIPLE_SESSIONS_FOR_SELECTING_WAITLIST",
  },
  Object {
    "payload": Object {
      "inviteeStatus": 2,
    },
    "type": "event-guestside-site/persona/UPDATE_INVITEE_STATUS_AND_CONTACT_ID",
  },
  Object {
    "type": "nucleus-guestside-site/dialog/CLOSE_DIALOG",
  },
  Object {
    "type": "TEST_SET_REFERRER",
  },
]
`;

exports[`AlreadyRegisteredDialog onLogin method routes correctly for confirmed registration 1`] = `
Array [
  Object {
    "payload": Object {
      "currentLogin": Object {
        "confirmationNumber": "confirmationNumber",
        "emailAddress": "emailAddress",
      },
      "regCart": Object {
        "eventRegistrations": Object {
          "11111111-1111-1111-1111-111111111111": Object {
            "attendee": Object {
              "inviteeStatus": 2,
            },
            "registrationPathId": "11111111-1111-1111-1111-111111111111",
            "registrationTypeId": "11111111-1111-1111-1111-111111111111",
            "sessionWaitlists": Object {},
          },
        },
        "eventSnapshotVersions": Object {
          "undefined": "fake-eventSnapshot-version",
        },
        "regCartId": "regCartId",
        "regMod": true,
        "regRetrieval": true,
        "status": "INPROGRESS",
      },
    },
    "type": "event-guestside-site/registrantLogin/LOG_IN_REGISTRANT_SUCCESS",
  },
  Object {
    "payload": Object {},
    "type": "event-guestside-site/sessionsInWaitlist/ADD_MULTIPLE_SESSIONS_FOR_SELECTING_WAITLIST",
  },
  Object {
    "payload": Object {
      "inviteeStatus": 2,
    },
    "type": "event-guestside-site/persona/UPDATE_INVITEE_STATUS_AND_CONTACT_ID",
  },
  Object {
    "type": "nucleus-guestside-site/dialog/CLOSE_DIALOG",
  },
  Object {
    "type": "TEST_SET_REFERRER",
  },
]
`;

exports[`AlreadyRegisteredDialog when known invitee Verify welcome text is not rendered 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    data-cvent-id="already-registered"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          title
                        </h2>
                      </div>
                    </div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      tabindex="-1"
                    >
                      <span
                        class="mockNucleusCoreTransition"
                      >
                        <div
                          class=""
                          style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                        >
                          <div
                            data-cvent-id="login-form"
                          >
                            <div>
                              <div
                                class="instructionalText"
                                style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                              >
                                instructionalText
                              </div>
                              <div
                                class="element"
                                data-cvent-id="email-address"
                              >
                                <label
                                  class="labelOnTop"
                                  for="emailAddress"
                                  style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                                >
                                  <span
                                    class=""
                                  >
                                    <span
                                      class=""
                                    >
                                      * 
                                    </span>
                                    <span
                                      data-cvent-id="label"
                                    >
                                      EventWidgets_Fields_EmailAddress__resx
                                    </span>
                                  </span>
                                </label>
                                <div
                                  class="inputContainerOnRight"
                                >
                                  <div
                                    class=""
                                  >
                                    <input
                                      class=""
                                      data-cvent-id="input"
                                      id="emailAddress"
                                      name="emailAddress"
                                      placeholder=""
                                      required=""
                                      style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                      type="text"
                                      value="emailAddress"
                                    />
                                  </div>
                                </div>
                              </div>
                              <div
                                class="element"
                                data-cvent-id="confirmation-number"
                              >
                                <label
                                  class="labelOnTop"
                                  for="confirmationNumber"
                                  style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                                >
                                  <span
                                    class=""
                                  >
                                    <span
                                      class=""
                                    >
                                      * 
                                    </span>
                                    <span
                                      data-cvent-id="label"
                                    >
                                      EventWidgets_Fields_ConfirmationNumber__resx
                                    </span>
                                  </span>
                                </label>
                                <div
                                  class="inputContainerOnRight"
                                >
                                  <div
                                    class=""
                                  >
                                    <input
                                      class=""
                                      data-cvent-id="input"
                                      id="confirmationNumber"
                                      name="confirmationNumber"
                                      placeholder=""
                                      required=""
                                      style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                      type="text"
                                      value="confirmationNumber"
                                    />
                                  </div>
                                </div>
                              </div>
                              <div
                                class="element"
                              >
                                <button
                                  class=""
                                  data-cvent-id="resend-confirmation-button"
                                  title="EventWidgets_AlreadyRegistered_ForgotConfirmationButton__resx"
                                  type="button"
                                >
                                  <span>
                                    EventWidgets_AlreadyRegistered_ForgotConfirmationButton__resx
                                  </span>
                                </button>
                              </div>
                              
                              <button
                                class=""
                                data-cvent-id="submit-button"
                                style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                              >
                                EventWidgets_AlreadyRegistered_Login__resx
                              </button>
                            </div>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`AlreadyRegisteredDialog with attendee login enabled Dialog renders correctly 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div>
                    <div>
                      <div
                        aria-describedby="dialogHeader"
                        class=""
                        style="background-color: rgb(221, 226, 230); border-radius: 0;"
                      >
                        <div
                          class=""
                          id="dialogHeader"
                          style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                        >
                          <h2
                            class=""
                            style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                          >
                            <div
                              class=""
                              data-cvent-id="close"
                              role="button"
                              tabindex="0"
                            >
                              <span
                                class="container"
                              >
                                <span
                                  aria-label="EventGuestSide_StandardDialog_FallbackText_Close__resx"
                                  class=""
                                  role="img"
                                />
                              </span>
                            </div>
                            EventGuestSide_ExistingInvitee_AlreadyRegistered_Header__resx
                          </h2>
                        </div>
                      </div>
                      <div
                        class=""
                        name="messageContainer"
                        style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                        tabindex="-1"
                      >
                        <div
                          class=""
                          style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                        >
                          <div
                            data-cvent-id="confirmation-form"
                          >
                            <div
                              class="cancelRegistrationModalText"
                              style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                            >
                              EventGuestSide_ExistingInvitee_AlreadyRegistered_AttendeeLogin_InstructionalText__resx
                            </div>
                            <button
                              aria-label="EventGuestSide_ExistingInvitee_AlreadyRegistered_AttendeeLogin_CancelText__resx"
                              class=""
                              data-cvent-id="no-submit-button"
                              title="EventGuestSide_ExistingInvitee_AlreadyRegistered_AttendeeLogin_CancelText__resx"
                              type="button"
                            >
                              <span>
                                EventGuestSide_ExistingInvitee_AlreadyRegistered_AttendeeLogin_CancelText__resx
                              </span>
                            </button>
                            <button
                              aria-label="EventGuestSide_ExistingInvitee_AlreadyRegistered_AttendeeLogin_LoginText__resx"
                              class=""
                              data-cvent-id="yes-submit-button"
                              title="EventGuestSide_ExistingInvitee_AlreadyRegistered_AttendeeLogin_LoginText__resx"
                              type="button"
                            >
                              <span>
                                EventGuestSide_ExistingInvitee_AlreadyRegistered_AttendeeLogin_LoginText__resx
                              </span>
                            </button>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`AlreadyRegisteredDialog, dupMatchKeyType EMAIL_LAST_FIRST_NAME matches snapshot when resend confirmation request succeeds 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    data-cvent-id="already-registered"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          title
                        </h2>
                      </div>
                    </div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      tabindex="-1"
                    >
                      <span
                        class="mockNucleusCoreTransition"
                      >
                        <div
                          class=""
                          style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                        >
                          <span
                            class="mockNucleusCoreTransition"
                          >
                            <div
                              data-cvent-id="resend-confirmation-success-message"
                            >
                              <div
                                class="container"
                              >
                                <span
                                  class="container"
                                  data-cvent-id="icon"
                                >
                                  <span
                                    aria-hidden="true"
                                    class="icon success"
                                    role="img"
                                  />
                                </span>
                                <h2
                                  class=""
                                  data-cvent-id="title"
                                  style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                                >
                                  EventWidgets_AlreadyRegistered_ConfirmationSentTitle__resx
                                </h2>
                                <h4
                                  class=""
                                  data-cvent-id="subtitle"
                                  style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.5625rem; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                                >
                                  EventWidgets_AlreadyRegistered_ConfirmationSentMessage__resx
                                </h4>
                                <div
                                  class="backButtonContainer"
                                >
                                  <button
                                    class=""
                                    data-cvent-id="link"
                                    title="< EventWidgets_AlreadyRegistered_BackToLoginButton__resx"
                                    type="button"
                                  >
                                    <span>
                                      &lt; EventWidgets_AlreadyRegistered_BackToLoginButton__resx
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </span>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;

exports[`AlreadyRegisteredDialog, dupMatchKeyType EMAIL_LAST_FIRST_NAME matches snapshot when switching to email/first name/last name resend confirmation form 1`] = `
Array [
  <div
    class=""
  >
    <div
      class=""
    />
    <span
      class="mockNucleusCoreTransition"
    >
      <div
        class=""
      >
        <div
          aria-label="Dialog"
          role="dialog"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class=""
            style="background-color: rgb(243, 59, 21); border-radius: 100px; position: absolute; left: 512px; top: 384px;"
          >
            <div
              class=""
            />
            <div
              class=""
            >
              <div
                class="dialogContainer"
              >
                <div
                  class="dialogChildren"
                >
                  <div
                    data-cvent-id="already-registered"
                  >
                    <div
                      aria-describedby="dialogHeader"
                      class=""
                      style="background-color: rgb(221, 226, 230); border-radius: 0;"
                    >
                      <div
                        class=""
                        id="dialogHeader"
                        style="background-color: rgb(249, 32, 242); padding: 15px 1.5625rem 15px 1.5625rem;"
                      >
                        <h2
                          class=""
                          style="color: rgb(255, 255, 255); font-family: Comic Sans MS, Comic Sans, Chalkboard, Marker Felt, sans-serif; font-size: 3.5625rem; font-style: normal; font-weight: 700; line-height: 1.3;"
                        >
                          <div
                            class=""
                            data-cvent-id="close"
                            role="button"
                            tabindex="0"
                          >
                            <span
                              class="container"
                            >
                              <span
                                aria-hidden="true"
                                class=""
                                role="img"
                              />
                            </span>
                          </div>
                          title
                        </h2>
                      </div>
                    </div>
                    <div
                      class=""
                      name="messageContainer"
                      style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                      tabindex="-1"
                    >
                      <span
                        class="mockNucleusCoreTransition"
                      >
                        <div
                          class=""
                          style="background-color: rgb(243, 59, 21); padding: 0px 1.25rem 1.875rem 1.25rem;"
                        >
                          <span
                            class="mockNucleusCoreTransition"
                          >
                            <div>
                              <div
                                data-cvent-id="resend-confirmation-form"
                              >
                                <div>
                                  <div
                                    class="instructionalText"
                                    style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 16px; color: rgb(39, 63, 105); line-height: 1.3; font-style: normal; background-color: transparent; border-radius: 0; padding: 0px 0px 0px 0px;"
                                  >
                                    EventWidgets_AlreadyRegistered_ResendConfirmationInstructions__resx
                                  </div>
                                  <div
                                    class="element"
                                    data-cvent-id="email-address"
                                  >
                                    <label
                                      class="labelOnTop"
                                      for="emailAddress"
                                      style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                                    >
                                      <span
                                        class=""
                                      >
                                        <span
                                          class=""
                                        >
                                          * 
                                        </span>
                                        <span
                                          data-cvent-id="label"
                                        >
                                          EventWidgets_Fields_EmailAddress__resx
                                        </span>
                                      </span>
                                    </label>
                                    <div
                                      class="inputContainerOnRight"
                                    >
                                      <div
                                        class=""
                                      >
                                        <input
                                          class=""
                                          data-cvent-id="input"
                                          id="emailAddress"
                                          name="emailAddress"
                                          placeholder=""
                                          required=""
                                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                          type="text"
                                          value="emailAddress"
                                        />
                                      </div>
                                    </div>
                                  </div>
                                  <div
                                    class="element"
                                    data-cvent-id="first-name"
                                  >
                                    <label
                                      class="labelOnTop"
                                      for="firstName"
                                      style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                                    >
                                      <span
                                        class=""
                                      >
                                        <span
                                          class=""
                                        >
                                          * 
                                        </span>
                                        <span
                                          data-cvent-id="label"
                                        >
                                          EventWidgets_Fields_FirstName__resx
                                        </span>
                                      </span>
                                    </label>
                                    <div
                                      class="inputContainerOnRight"
                                    >
                                      <div
                                        class=""
                                      >
                                        <input
                                          class=""
                                          data-cvent-id="input"
                                          id="firstName"
                                          name="firstName"
                                          placeholder=""
                                          required=""
                                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                          type="text"
                                          value="firstName"
                                        />
                                      </div>
                                    </div>
                                  </div>
                                  <div
                                    class="element"
                                    data-cvent-id="last-name"
                                  >
                                    <label
                                      class="labelOnTop"
                                      for="lastName"
                                      style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(4, 21, 50); line-height: 1.3; text-align: left; font-style: normal; background-color: transparent; border-radius: 0; padding: 5px 5px 5px 5px;"
                                    >
                                      <span
                                        class=""
                                      >
                                        <span
                                          class=""
                                        >
                                          * 
                                        </span>
                                        <span
                                          data-cvent-id="label"
                                        >
                                          EventWidgets_Fields_LastName__resx
                                        </span>
                                      </span>
                                    </label>
                                    <div
                                      class="inputContainerOnRight"
                                    >
                                      <div
                                        class=""
                                      >
                                        <input
                                          class=""
                                          data-cvent-id="input"
                                          id="lastName"
                                          name="lastName"
                                          placeholder=""
                                          required=""
                                          style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 18px; color: rgb(39, 63, 105); text-align: left; line-height: 1.3; font-style: normal; background-color: rgb(255, 255, 255); border-radius: 6px; border-width: 2px; border-style: solid; border-color: #dde2e6; padding: 5px 5px 5px 5px;"
                                          type="text"
                                          value="lastName"
                                        />
                                      </div>
                                    </div>
                                  </div>
                                  <div
                                    class="element"
                                  >
                                    <button
                                      class=""
                                      data-cvent-id="back-link"
                                      title="< EventWidgets_AlreadyRegistered_BackButton__resx"
                                      type="button"
                                    >
                                      <span>
                                        &lt; EventWidgets_AlreadyRegistered_BackButton__resx
                                      </span>
                                    </button>
                                  </div>
                                  <button
                                    class=""
                                    data-cvent-id="submit-button"
                                    style="font-family: PT Sans, sans-serif; font-weight: 400; font-size: 1.25rem; color: rgb(255, 255, 255); line-height: 1.3; font-style: normal; background-color: rgb(4, 21, 50); border-radius: 6px; border-width: 1px; border-style: solid; border-color: #041532; padding: 5px 1.25rem 5px 1.25rem;"
                                  >
                                    EventWidgets_AlreadyRegistered_Submit__resx
                                  </button>
                                </div>
                              </div>
                            </div>
                          </span>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </span>
  </div>,
]
`;
